upload login page with under cover password

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,15 @@
     "Host": "smtp.gmail.com",
     "Port": 587
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "DemoAdminEmail": "demoadmin@gmail.com",
+
+  "DemoPmEmail": "demopm@gmail.com",
+
+  "DemoDevEmail": "demodev@gmail.com",
+
+  "DemoSubEmail": "demosub@gmail.com",
+
+  "DemoPassword": "Nhoclanro1!"
 }
